--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>KnightOne Bootstrap Template</title>
+  <title>Corporate index</title>
 
   <!-- Bootstrap -->
+  <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link href="css/animate.min.css" rel="stylesheet">
@@ -29,7 +30,7 @@
       <div class="container">
         <div class="row">
           <div class="site-logo">
-            <a href="index.html" class="brand">Knight One</a>
+            <a href="index.html" class="brand"> <img src="./img/logo.png" width="50%" alt="logo"></a>
           </div>
 
           <!-- Brand and toggle get grouped for better mobile display -->
