--- a/index.html
+++ b/index.html
@@ -236,6 +236,9 @@
           <div class="map">
             <div id="google-map" data-latitude="40.713732" data-longitude="-74.0092704"></div>
           </div> -->
+      <div>
+
+      </div>
       <section id="contact">
         <div class="container">
           <div class="row contact-wrap">
