--- a/index.html
+++ b/index.html
@@ -14,12 +14,6 @@
   <link href="css/animate.min.css" rel="stylesheet">
   <link href="css/animate.css" rel="stylesheet" />
   <link href="css/style.css" rel="stylesheet">
-  <!-- =======================================================
-    Theme Name: KnightOne
-    Theme URL: https://bootstrapmade.com/knight-simple-one-page-bootstrap-template/
-    Author: BootstrapMade
-    Author URL: https://bootstrapmade.com
-  ======================================================= -->
 
 </head>
 
@@ -289,16 +283,10 @@
               <p>
                 <img src="img/favicon.ico" height="42" width="42"> &copy;Indice Empresarial Corporativo,todos los derechos reservados</p>
               <div class="credits">
-                <!--
-                All the links in the footer should remain intact.
-                You can delete the links only if you purchased the pro version.
-                Licensing information: https://bootstrapmade.com/license/
-                Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=KnightOne
-              -->
                 Designed by
                 <big>
                   <u>
-                    <a href="https://bootstrapmade.com/">JeraInsigth</a>
+                    <a href="">JeraInsigth</a>
                   </u>
                 </big>
 
@@ -314,7 +302,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/jquery.easing.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8HeI8o-c1NppZA-92oYlXakhDPYR7XMY"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key="></script> -->
     <script src="js/functions.js"></script>
     <script src="contactform/contactform.js"></script>
 
