--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Corporate index</title>
 
   <!-- Bootstrap -->
-  <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
+  <link rel="shortcut icon" type="image/png" href="favicon.ico" />
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link href="css/animate.min.css" rel="stylesheet">
@@ -24,7 +24,9 @@
       <div class="container">
         <div class="row">
           <div class="site-logo">
-            <a href="index.html" class="brand"> <img src="./img/logo.png" width="50%" alt="logo"></a>
+            <a href="index.html" class="brand">
+              <img src="./img/logo.png" width="50%" alt="logo">
+            </a>
           </div>
 
           <!-- Brand and toggle get grouped for better mobile display -->
@@ -44,6 +46,9 @@
               </li>
               <li>
                 <a href="#contact">Contacto</a>
+              </li>
+              <li>
+                <a href="http://www.corporateindex.cl/EmpatiaCorporativa/#/">Encuesta</a>
               </li>
             </ul>
           </div>
