cambios en nosotros se agrega la o

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a href="#home">Inicio</a>
               </li>
               <li>
-                <a href="#about">Nostros</a>
+                <a href="#about">Nosotros</a>
               </li>
               <li>
                 <a href="#contact">Contacto</a>
