--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
                 <a href="#about">Nosotros</a>
               </li>
               <li>
+                <a href="#proposito">Proposito</a>
+              </li>
+              <li>
+                <a href="#empatia">Empatia Corporativa</a>
+              </li>
+              <li>
                 <a href="#contact">Contacto</a>
               </li>
               <li>
@@ -67,60 +73,38 @@
   </div>
 
 
-  <!-- Section: about -->
-  <section id="about">
-    <!-- <div class="container marginbot-50">
+  <!-- Section: proposito -->
+   <section id="proposito"> 
+     <div class="container marginbot-50">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
           <div class="wow flipInY" data-wow-offset="0" data-wow-delay="0.4s">
             <div class="section-heading text-center">
-              <h2 class="h-bold">About</h2>
+              <h2 class="h-bold">Proposito</h2>
               <div class="divider-header"></div>
               <p>Aqui pondremos el titulo para el carrousel</p>
             </div>
           </div>
         </div>
       </div>
-    </div> -->
+    </div> 
 
-    <div class="container">
-      <!-- <div class="row">
+     <div class="container"> 
+       <div class="row">
         <div class="col-md-6">
           <img src="img/dummy1.jpg" alt="" class="img-responsive" />
-        </div> -->
+        </div> 
 
-      <!-- <div class="col-md-6">
-          <p>Graeco voluptua sed ea, malorum quaeque cotidieque per eu, quo id possit dissentias.</p>
-          <div class="progress progress-striped active">
-            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
-              style="width: 40%">
-              40% - eCommerce
-            </div>
-          </div>
-          <div class="progress progress-striped active">
-            <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-              20% - Ruby
-            </div>
-          </div>
-          <div class="progress progress-striped active">
-            <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
-              style="width: 60%">
-              60% - User interface
-            </div>
-          </div>
-          <div class="progress progress-striped active">
-            <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
-              style="width: 80%">
-              80% - WordPress
-            </div>
-          </div>
-        </div>
-      </div>
+       <div class="col-md-6">
+        <p>
+          
+        </p>
     </div>
   </section>
-  <! /Section: about -->
+  
+  <!-- <! /Section: about 
 
-      <!-- Section: services -->
+      <!Section: services -->
 
       <!--   <section id="services" class="home-section color-dark bg-white">
           <div class="container marginbot-50">
