--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
         <div class="container">
           <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-6">
               <div class="wow flipInY" data-wow-offset="0" data-wow-delay="0.8s">
                 <div class="service-icon">
                   <span class="fa fa-bullhorn fa-5x"></span>
@@ -201,7 +201,7 @@
                   decretados por la ONU en el año 2015.</p>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-6">
               <div class="wow flipInY" data-wow-offset="0" data-wow-delay="1.2s">
                 <div class="service-icon">
                   <span class="fa fa-globe fa-5x"></span>
@@ -212,7 +212,7 @@
                   a nuestros clientes.</p>
               </div>
             </div>
-            <div class="col-md-4">
+            <!-- <div class="col-md-4">
               <div class="wow flipInY" data-wow-offset="0" data-wow-delay="1.6s">
                 <div class="service-icon">
                   <span>
@@ -224,21 +224,39 @@
                   Nuestro primer producto de excelencia en la investigación de la empatía a nivel empresarial y tiene como misión evaluar los
                   niveles de empatía y sus criterios de valoración en las empresas y grandes corporaciones.</p>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
 
       </section>
       <!-- Section: services -->
-
-      <!-- 
+      
         <div id="contact">
-          <div class="map">
-            <div id="google-map" data-latitude="40.713732" data-longitude="-74.0092704"></div>
-          </div> -->
-      <div>
+          <div class="service-icon" style="text-align: center;">
+            <span>
+                <img src="img/favicon.ico" height="85" width="100">
+            </span>
+          </div>
+          <div style="text-align: center;">
+            <h2>Empatía corporativa</h2>
+          </div>
 
-      </div>
+          <div style="text-align: center;">
+            <p>
+                El enfoque tradicional de la reputación corporativa se enfocaba mayormente en la correcta comunicación de
+                los mensajes internos de la compañía a sus stakeholders. Hoy la clave es construir estos mensajes en base a
+                las expectativas y necesidades concretas de los públicos de la organización, de manera que sus respuestas y
+                mensajes sean empáticos.
+                La empatía corporativa se define como la capacidad de las organizaciones de hacerse cargo de las
+                expectativas y necesidades de sus públicos y stakeholders en general, adecuando en consecuencia sus
+                acciones y mensajes para entregar así una respuesta más alineada a estas necesidades.
+                Corporate Index ha desarrollado una metodología local, basada en un modelo Inglés, para medir y gestionar
+                la Empatía Corporativa (Indice de Empatía Corporativa – IEC), lo que sin duda definirá un punto de partida
+                en la atención a la gestión del comportamiento ético al interior de las organizaciones.
+            </p>
+          </div>
+        </div>
+     
       <section id="contact">
         <div class="container">
           <div class="row contact-wrap">
@@ -273,6 +291,8 @@
             </div>
           </div>
         </div>
+      </section>
+
     </div>
     </section>
 
