--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     </div>
   </section>
   
-  <!-- <! /Section: about 
+  <!-- <! /Section: proposito>
 
       <!Section: services -->
 
@@ -160,8 +160,8 @@
         </section> -->
       <!-- /Section: services -->
 
-      <!-- Section: works -->
-      <section id="works">
+      <!-- Section: about -->
+      <section id="about">
         <div class="container marginbot-50">
           <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
@@ -218,7 +218,7 @@
         </div>
 
       </section>
-      <!-- /Section: work -->
+      <!-- /Section: about -->
       <!-- 
         <div id="contact">
           <div class="map">
