--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 
 
   <!-- Section: about -->
+  <!-- sisis -->
   <section id="about">
     <!-- <div class="container marginbot-50">
       <div class="row">
