cambios realizados a nosotros

--- a/index.html
+++ b/index.html
@@ -187,9 +187,11 @@
                 </div>
                 <h2>Nuestra Visión</h2>
                 <p>
-                  Ser una referencia intelectual y profesional en la investigación y gestión de la empatía corporativa a nivel empresarial
-                  en alineación con indicadores de cumplimiento general y por industrias de los Objetivos de Desarrollo Sostenible
-                  decretados por la ONU en el año 2015.</p>
+                  Convertirnos en una referencia intelectual y profesional 
+                  en la investigación y gestión de los activos intangibles 
+                  que agregan valor al propósito de las organizaciones
+                  y en alineación a los objetivos de desarrollo sostenible (ODS).
+                </p>
               </div>
             </div>
             <div class="col-md-6">
@@ -198,9 +200,10 @@
                   <span class="fa fa-globe fa-5x"></span>
                 </div>
                 <h2>Nuestra Misión</h2>
-                <p> Forlalecer y consolidar nuestro capital intelectual constantemente, a través de investigaciones asociadas
-                  a empatía corporativa y cumpimiento de los ODS, para entregar reportes, estudios y consultorías de excelencia
-                  a nuestros clientes.</p>
+                <p> Proveer a la industria, organizaciones y entidades en general 
+                    de herramientas y consultoría de excelencia en torno a la medición
+                    y gestión de activos intangibles.
+                </p>
               </div>
             </div>
             <!-- <div class="col-md-4">
