--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           </div>
         </div>
 
-        <div class="container">
+        <div class="container" style="text-align: center;">
           <div class="row">
             <div class="col-md-6">
               <div class="wow flipInY" data-wow-offset="0" data-wow-delay="0.8s">
