--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
       </section>
       <!-- Section: services -->
       
-        <div id="empatia">
+        <div id="empatia" style="margin-top: 10px">
           <div class="service-icon" style="text-align: center;">
             <span>
                 <img src="img/favicon.ico" height="85" width="100">
