--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
         <div class="container">
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6" style="text-align: center;">
               <div class="wow flipInY" data-wow-offset="0" data-wow-delay="0.8s">
                 <div class="service-icon">
                   <span class="fa fa-bullhorn fa-5x"></span>
@@ -194,7 +194,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6" style="text-align: center;">
               <div class="wow flipInY" data-wow-offset="0" data-wow-delay="1.2s">
                 <div class="service-icon">
                   <span class="fa fa-globe fa-5x"></span>
@@ -225,7 +225,7 @@
       </section>
       <!-- Section: services -->
       
-        <div id="empatia">
+      <div id="empatia" style="margin-top: 50px;">
           <div class="service-icon" style="text-align: center;">
             <span>
                 <img src="img/favicon.ico" height="85" width="100">
