--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
         <div class="container">
           <div class="row contact-wrap">
             <div class="col-md-8 col-md-offset-2">
-              <div id="sendmessage">Your message has been sent. Thank you!</div>
+              <div id="sendmessage">Tu mensaje ha sido enviado. Gracias</div>
               <div id="errormessage"></div>
               <form action="" method="post" role="form" class="contactForm">
                 <div class="form-group">
@@ -385,7 +385,13 @@
     <script src="js/jquery.easing.min.js"></script>
     <!-- <script src="https://maps.googleapis.com/maps/api/js?key="></script> -->
     <script src="js/functions.js"></script>
-    <script src="contactform.js"></script>
+    <script src="contactform/contactform.js"></script>
+    <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.2.4/email.min.js"></script>
+    <script type="text/javascript">
+    (function(){
+      emailjs.init("user_MPNjUCeltLHwdkutYlcPQ");
+      })();
+</script>
 
 </body>
 
