--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
         <div class="container">
           <div class="row contact-wrap">
             <div class="col-md-8 col-md-offset-2">
-              <div id="sendmessage">Tu mensaje se ha enviado. Gracias</div>
+              <div id="sendmessage">Tu mensaje se ha enviado, Gracias.</div>
               <div id="errormessage"></div>
               <form action="" method="post" role="form" class="contactForm">
                 <div class="form-group">
@@ -326,7 +326,7 @@
                   <div class="validation"></div>
                 </div>
                 <div class="form-group">
-                  <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Mensaje"></textarea>
+                  <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Escriba sus consultas" placeholder="Mensaje"></textarea>
                   <div class="validation"></div>
                 </div>
 
