--- a/explorer.html
+++ b/explorer.html
@@ -111,8 +111,9 @@
          Descarga Google Chrome aca y podras responder y hacer uso de la plataforma
          de encuesta para evaluar el indice corporativo. 
          Pincha aca para descargar.
+         <a href="https://www.google.com/chrome/">https://www.google.com/chrome/</a>
         </p>
-        <a href="https://www.google.com/chrome/">https://www.google.com/chrome/</a>
+       
        </div>
       </div>
      </div>
@@ -138,8 +139,8 @@
             Descarga Mozilla Firefox aca y podras responder y hacer uso de la plataforma
             de encuesta para evaluar el indice corporativo.
             Pincha aca para descargar.
+            <a href="https://www.mozilla.org/es-CL/firefox/new/" >https://www.mozilla.org/es-CL/firefox/new/</a>
           </p>
-          <a href="https://www.mozilla.org/es-CL/firefox/new/"style="padding: 0px 20px 0px 20px;" >https://www.mozilla.org/es-CL/firefox/new/</a>
        </div> 
       <div class="col-md-6">
           <img src="img/Nuevo-logo-Firefox1.jpg" alt="" class="img-responsive" />
