uploading change of text 30-05-2019

--- a/index.html
+++ b/index.html
@@ -92,10 +92,22 @@
          <img src="img/dummy1.jpg" alt="" class="img-responsive" />
        </div>  -->
       <div class="col-md-12" style="display: flex;
-      justify-content: center;">
+      justify-content: center; text-align: justify;">
        <p>
-        Medir y gestionar adecuadamente las variables claves de desempeño organizacional.
-       </p>
+        Medimos y gestionamos los intangibles claves, fuentes de creación de valor y ventaja competitiva de las empresas. 
+        Corporate Index nace como firma de consultoría especialista en la construcción de métricas y 
+        robustos índices que permiten medir la percepción respecto a los "activos intangibles"de las compañías. 
+        Sus metodologías y herramientas de medición, propiedad intelectual de Corporate Index son un aporte al ecosistema 
+        empresarial y permiten gestionar variables claves del negocio. 
+        El equipo de Corporate Index cuenta con mas de 10 años de experiencia trabajando en la medición y 
+        gestión de estos activos, tales como reputación y responsabilidad corporativa, imagen de marca , 
+        cultura organizacional, gestión de la felicidad y clima interno. 
+        Las empresas actualmente han comenzado a valorar y medir estos intangibles ya que han descubierto 
+        que tienen directa incidencia en sus resultados, preocuparse de estos activos las transforma en 
+        empresas mas rentables y productivas. Esta nueva era de ciudades inclusivas, igualdad de género, empleos de calidad, 
+        consumo y producción sostenible hace necesario crear una firma especializada en la medición y gestión de la empatía 
+        corporativa.
+      </p>
       </div>
      </div>
     </div>
@@ -153,16 +165,13 @@
       <div class="row">
        <div class="col-md-6" style="text-align: justify;">
           <p style="padding: 0px 20px 0px 20px;">
-              El enfoque tradicional de la reputación corporativa se focalizaba mayormente en la correcta comunicación de
-              los mensajes internos de la compañía a sus stakeholders. Hoy la clave es construir estos mensajes en base a
-              las expectativas y necesidades concretas de los públicos de la organización, de manera que sus respuestas y
-              mensajes sean empáticos.
-              La empatía corporativa se define como la capacidad de las organizaciones de hacerse cargo de las
-              expectativas y necesidades de sus públicos y stakeholders en general, adecuando en consecuencia sus
-              acciones y mensajes para entregar así una respuesta más alineada a estas necesidades.
-              Corporate Index ha desarrollado una metodología local, basada en un modelo Inglés, para medir y gestionar
-              la Empatía Corporativa (Indice de Empatía Corporativa – ICE), lo que sin duda definirá un punto de partida
-              en la atención a la gestión del comportamiento ético al interior de las organizaciones.
+            La Empatía Corporativa a nivel empresarial, se define como la como el grado de compromiso que 
+            se percibe de una compañía al hacerse cargo de las expectativas y 
+            del impacto emocional y económico que la entidad genera en sus públicos de interés. La Empatía empresarial, 
+            se define también, como la habilidad de una compañía de "ponerse en el lugar del otro".
+            Corporate Index ha desarrollado una metodología única, basada en un modelo Inglés para medir y 
+            gestionar empatía. ICE Indice de Empatía Corporativa es la primera herramienta local de excelencia en la medición 
+            de la empatía, lo que sin duda definirá un punto de partida en la gestión del comportamiento ético y sostenible al interior de las organizaciones.
           </p>
         
        </div> 
@@ -251,10 +260,8 @@
                 </div>
                 <h2>Nuestra Visión</h2>
                 <p>
-                  Convertirnos en una referencia intelectual y profesional 
-                  en la investigación y gestión de los activos intangibles 
-                  que agregan valor al propósito de las organizaciones
-                  y en alineación a los objetivos de desarrollo sostenible (ODS).
+                  Convertirnos en una referencia intelectual y profesional en la investigación y gestión de los activos intangibles 
+                  que agregan valor al propósito de las organizaciones y en alineación a los objetivos de desarrollo sostenible (ODS).
                 </p>
               </div>
             </div>
@@ -264,9 +271,8 @@
                   <span class="fa fa-globe fa-5x"></span>
                 </div>
                 <h2>Nuestra Misión</h2>
-                <p> Proveer a la industria, organizaciones y entidades en general 
-                    de herramientas y consultoría de excelencia en torno a la medición
-                    y gestión de activos intangibles.
+                <p> Proveer a la industria, organizaciones y entidades en general de herramientas y consultoría de excelencia en torno a la 
+                    medición y gestión de activos intangibles.
                 </p>
               </div>
             </div>
