--- a/index.html
+++ b/index.html
@@ -54,8 +54,11 @@
                 <a href="#contact" style="font-size: 64%">Contacto</a>
               </li>
               <li>
-                <a href="http://www.corporateindex.cl/EmpatiaCorporativa/#/" style="font-size: 64%">Encuesta</a>
+                <a href="http://www.corporateindex.cl/empatiacorporativa/#/" style="font-size: 64%">Encuesta</a>
               </li>
+              <!-- <li>
+                <a href="http://www.corporateindex.cl/empatiacorporativa/#/" style="font-size: 64%">Ranking</a>
+              </li> -->
             </ul>
           </div>
           <!-- /.Navbar-collapse -->
